// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal useModal opens and closes modal 1`] = `
<body>
  <div
    data-base-ui-inert=""
    id="modal-root"
  />
  <div>
    <div
      class="Picasso-root"
    >
      <button
        aria-disabled="false"
        class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-hidden [[data-component-type="button"]+&]:ml cursor-pointer no-underline hover:no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border-none text-white visited:text-white hover:bg-[#4269D6] active:bg-[#1A41AB] bg-blue min-w h-8 py-0 px-4"
        data-base-ui-inert=""
        data-component-type="button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="items-center inline-flex font-semibold whitespace-nowrap text-button"
        >
          Show
        </span>
      </button>
      <div
        data-base-ui-portal=""
        id=":r2:"
      >
        <div
          aria-hidden="true"
          class="opacity-0 transition-opacity fixed z-modal inset-0 bg-black/50 [-webkit-tap-highlight"
          data-base-ui-inert=""
          style="transition-duration: 300ms; opacity: 1;"
        />
        <span
          data-base-ui-focus-guard=""
          data-base-ui-inert=""
          data-type="inside"
          role="button"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="0"
        />
        <div
          class="fixed z-modal inset-0 flex flex-col text-lg leading-[normal] justify-center items-center bg-transparent outline-hidden"
          data-base-ui-focusable=""
          data-open=""
          id=":r0:"
          role="presentation"
          style="--nested-dialogs: 0;"
          tabindex="-1"
        >
          <div
            class="bg-white shadow-2 duration-300 delay-0 opacity-0 transition-opacity outline-hidden overflow-y flex flex-col m-4 sm:h-auto sm:m-8 max-w-[calc(100%_ sm:max-w-[calc(100%_ rounded-md w-[40.625rem] relative max-h-[calc(100%_ sm:max-h-[calc(100%_"
            role="dialog"
            style="transition-duration: 300ms; opacity: 1;"
            tabindex="-1"
          >
            <p>
              Modal content
            </p>
            <button
              aria-disabled="false"
              class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-hidden [[data-component-type="button"]+&]:ml cursor-pointer no-underline hover:no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border-none text-white visited:text-white hover:bg-[#4269D6] active:bg-[#1A41AB] bg-blue min-w h-8 py-0 px-4"
              data-component-type="button"
              role="button"
              tabindex="0"
              type="button"
            >
              <span
                class="items-center inline-flex font-semibold whitespace-nowrap text-button"
              >
                Hide
              </span>
            </button>
          </div>
        </div>
        <span
          data-base-ui-focus-guard=""
          data-base-ui-inert=""
          data-type="inside"
          role="button"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="0"
        />
      </div>
      <span
        data-base-ui-focus-guard=""
        data-base-ui-inert=""
        data-type="outside"
        role="button"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="0"
      />
      <span
        aria-owns=":r2:"
        data-base-ui-inert=""
        style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
      />
      <span
        data-base-ui-focus-guard=""
        data-base-ui-inert=""
        data-type="outside"
        role="button"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`Modal useModal opens and closes modal 2`] = `
<body>
  <div
    id="modal-root"
  />
  <div>
    <div
      class="Picasso-root"
    >
      <button
        aria-disabled="false"
        class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-hidden [[data-component-type="button"]+&]:ml cursor-pointer no-underline hover:no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border-none text-white visited:text-white hover:bg-[#4269D6] active:bg-[#1A41AB] bg-blue min-w h-8 py-0 px-4"
        data-component-type="button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="items-center inline-flex font-semibold whitespace-nowrap text-button"
        >
          Show
        </span>
      </button>
    </div>
  </div>
</body>
`;

exports[`Modal useModal shows multiple modals at the same time 1`] = `
<body>
  <div
    data-base-ui-inert=""
    id="modal-root"
  />
  <div>
    <div
      class="Picasso-root"
    >
      <button
        aria-disabled="false"
        class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-hidden [[data-component-type="button"]+&]:ml cursor-pointer no-underline hover:no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border-none text-white visited:text-white hover:bg-[#4269D6] active:bg-[#1A41AB] bg-blue min-w h-8 py-0 px-4"
        data-base-ui-inert=""
        data-component-type="button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="items-center inline-flex font-semibold whitespace-nowrap text-button"
        >
          Show first
        </span>
      </button>
      <span
        data-base-ui-focus-guard=""
        data-base-ui-inert=""
        data-type="outside"
        role="button"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="0"
      />
      <span
        aria-owns=":r5:"
        data-base-ui-inert=""
        style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
      />
      <span
        data-base-ui-focus-guard=""
        data-base-ui-inert=""
        data-type="outside"
        role="button"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="0"
      />
      <button
        aria-disabled="false"
        class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-hidden [[data-component-type="button"]+&]:ml cursor-pointer no-underline hover:no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border-none text-white visited:text-white hover:bg-[#4269D6] active:bg-[#1A41AB] bg-blue min-w h-8 py-0 px-4"
        data-base-ui-inert=""
        data-component-type="button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="items-center inline-flex font-semibold whitespace-nowrap text-button"
        >
          Show second
        </span>
      </button>
      <div
        data-base-ui-inert=""
        data-base-ui-portal=""
        id=":r5:"
      >
        <div
          aria-hidden="true"
          class="opacity-0 transition-opacity fixed z-modal inset-0 bg-black/50 [-webkit-tap-highlight"
          data-base-ui-inert=""
          style="transition-duration: 300ms; opacity: 1;"
        />
        <span
          data-base-ui-focus-guard=""
          data-base-ui-inert=""
          data-type="inside"
          role="button"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="0"
        />
        <div
          class="fixed z-modal inset-0 flex flex-col text-lg leading-[normal] justify-center items-center bg-transparent outline-hidden"
          data-base-ui-focusable=""
          data-open=""
          id=":r3:"
          role="presentation"
          style="--nested-dialogs: 0;"
          tabindex="-1"
        >
          <div
            class="bg-white shadow-2 duration-300 delay-0 opacity-0 transition-opacity outline-hidden overflow-y flex flex-col m-4 sm:h-auto sm:m-8 max-w-[calc(100%_ sm:max-w-[calc(100%_ rounded-md w-[40.625rem] relative max-h-[calc(100%_ sm:max-h-[calc(100%_"
            role="dialog"
            style="transition-duration: 300ms; opacity: 1;"
            tabindex="-1"
          >
            <p>
              First modal content
            </p>
          </div>
        </div>
        <span
          data-base-ui-focus-guard=""
          data-base-ui-inert=""
          data-type="inside"
          role="button"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="0"
        />
      </div>
      <div
        data-base-ui-portal=""
        id=":r8:"
      >
        <div
          aria-hidden="true"
          class="opacity-0 transition-opacity fixed z-modal inset-0 bg-black/50 [-webkit-tap-highlight"
          data-base-ui-inert=""
          style="transition-duration: 300ms; opacity: 1;"
        />
        <span
          data-base-ui-focus-guard=""
          data-base-ui-inert=""
          data-type="inside"
          role="button"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="0"
        />
        <div
          class="fixed z-modal inset-0 flex flex-col text-lg leading-[normal] justify-center items-center bg-transparent outline-hidden"
          data-base-ui-focusable=""
          data-open=""
          id=":r6:"
          role="presentation"
          style="--nested-dialogs: 0;"
          tabindex="-1"
        >
          <div
            class="bg-white shadow-2 duration-300 delay-0 opacity-0 transition-opacity outline-hidden overflow-y flex flex-col m-4 sm:h-auto sm:m-8 max-w-[calc(100%_ sm:max-w-[calc(100%_ rounded-md w-[40.625rem] relative max-h-[calc(100%_ sm:max-h-[calc(100%_"
            role="dialog"
            style="transition-duration: 300ms; opacity: 1;"
            tabindex="-1"
          >
            <p>
              Second modal content
            </p>
          </div>
        </div>
        <span
          data-base-ui-focus-guard=""
          data-base-ui-inert=""
          data-type="inside"
          role="button"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="0"
        />
      </div>
      <span
        data-base-ui-focus-guard=""
        data-base-ui-inert=""
        data-type="outside"
        role="button"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="0"
      />
      <span
        aria-owns=":r8:"
        data-base-ui-inert=""
        style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
      />
      <span
        data-base-ui-focus-guard=""
        data-base-ui-inert=""
        data-type="outside"
        role="button"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;
